@@ -1,3 +1,8 @@
+2007-05-30  Tim Jenness  <tjenness@cpan.org>
+
+	* lib/Astro/Coords.pm (calculate): Make sure that the calculate()
+	method does not trash the existing datetime().
+
 2007-02-05  Tim Jenness  <tjenness@cpan.org>
 
 	* lib/Astro/Coords/Angle/Hour.pm: Fix constructor so that it
